# tableau-extraction

./: .gcloudignore  .gitignore  Makefile  Pipfile  README.md  app.yaml  config.py  log.py  pyproject.toml  requirements.txt  run_dev.sh  setup.sh  test.csv  wsgi.py
application/: __init__.py  database.py  form.py  main.py  routes.py  tableau.py  view_dash.py
application/static/data/: view.csv
application/static/scss/: header.scss  main.scss
application/templates/: index.html  layout.html  nav.html  view.html
tableau_view_extractor/: __init__.py  database.py  form.py  routes.py  tableau.py
tableau_view_extractor/static/scss/: global.scss  view.scss
tableau_view_extractor/templates/: export.html  export.jinja2  index.jinja2  layout.jinja2  nav.html  nav.jinja2  view.html  view.jinja2
